довалена нофа фича - add-search